<resources>
    <string name="app_name">Action Bar Experiment</string>
    <string name="action_settings">Settings</string>

    <string name="ui_tabname_breakfast">breakfast</string>
    <string name="ui_tabname_lunch">lunch</string>
    <string name="ui_tabname_snack">snack</string>
    <string name="ui_tabname_dinner">dinner</string>
    <string name="ui_menu_search">search</string>
    <string name="ui_menu_send">send</string>
    <string name="ui_menu_share">share</string>
    <string name="ui_menu_about">about</string>
    <string name="ui_menu_feedback">feedback</string>
    <string name="ui_menu_quit">quit</string>
    <string name="action_bar_button_search">action_bar_button_search</string>
</resources>
