<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id = "@+id/menuitem_search"
        android:icon = "@android:drawable/ic_menu_search"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_search">
    </item>

    <item
        android:id = "@+id/menuitem_send"
        android:icon = "@android:drawable/ic_menu_send"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_send">
    </item>
    <item
        android:id = "@+id/menuitem_share"
        xmlns:app="http://schemas.android.com/apk/res-auto" :actionProviderClass = "android.widget.ShareActionProvider"
        android:icon = "@android:drawable/ic_menu_share"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_share">
    </item>
    <item
        android:id = "@+id/menuitem_about"
        android:icon = "@android:drawable/ic_menu_info_details"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_about">
    </item>
    <item
        android:id = "@+id/menuitem_feedback"
        android:icon = "@android:drawable/ic_menu_help"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_feedback">
    </item>
    <item
        android:id = "@+id/menuitem_quit"
        android:icon = "@android:drawable/ic_menu_close_clear_cancel"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/ui_menu_quit">
    </item>
    <item
        android:id = "@string/action_settings"
        android:orderInCategory="100"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "ifRoom"
        android:title = "@string/action_settings">
    </item>

    <item
        android:id = "@+id/menu_item_search"
        xmlns:app="http://schemas.android.com/apk/res-auto" :actionViewClass="android.widget.SearchView"
        android:icon = "@drawable/ic_launcher"
        xmlns:app="http://schemas.android.com/apk/res-auto" :showAsAction = "collapseActionView"
        android:title = "@string/action_bar_button_search">
    </item>

</menu>